--- a/django_project/hub/templates/hub/modules/toast.html
+++ b/django_project/hub/templates/hub/modules/toast.html
@@ -1,5 +1,5 @@
 
-<div id="{{toastId}}" class="toast" data-bs-delay="5000" role="{{toastType}}" aria-live="assertive" aria-atomic="true">
+<div id="{{toastId}}" class="toast" data-bs-delay="5000" role="{{toastType}}" aria-live="polite" aria-atomic="true">
     <div class="toast-header">
         <strong class="me-auto">{{toastName}}</strong>
         <small class="text-muted toastTimeCounter"></small>
