--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -13,7 +13,7 @@
 
 <!-- ____________________________Result Table______________________________________ -->
 
-<table class="table">
+<table class="table" id="resultsTable">
     <thead>
         <tr>
             <th scope="col">
