--- a/django_project/hub/templates/hub/modules/items.html
+++ b/django_project/hub/templates/hub/modules/items.html
@@ -9,7 +9,7 @@
     {% include "hub/modules/modalButton.html" with modalId="Del" buttonSymbol=" - " buttonColor="danger" %}
 </div>
 
-{% include "hub/modules/formModal.html" with modalId="Add"%}
+{% include "hub/modules/addModal.html" with modalId="Add"%}
 {% include "hub/modules/deleteModal.html" with modalId="Del" %}
 {% include "hub/modules/singleModal.html" with modalId="single" %}
 
