--- a/django_project/hub/templates/hub/modules/results.html
+++ b/django_project/hub/templates/hub/modules/results.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% for r in results %}
-    <tr id="{{ r.id }}_item" value="{{ r.id }}">
+    <tr id="{{ r.id }}_item" value="{{ r.id }} ">
 
             <td>
                 <input class="checkboxlist form-check-input" type="checkbox" value="{{r}}" id="{{ r.id }}">
@@ -28,10 +28,9 @@
             {% endif %}
 
             <td>
-                <button type="button" class="btn btn-light itemClickEdit" value="{{ r.id }}">
+                <a type="button" class="btn btn-light" href="./{{ r.id }}" >
                     <img style="width:10px" src="{% static 'hub/SVG/pencil-fill.svg' %}">
-                </button>
+                </a>
             </td>
         </tr>
 {% endfor %}
-
