renamed stored to space and ref to space so that it is better fitting

--- a/django_project/movement/templates/movement/movement.html
+++ b/django_project/movement/templates/movement/movement.html
@@ -87,7 +87,7 @@
     };
 
     function removeArticle(data){
-        if(data.storable && data.stored){
+        if(data.storable && data.space){
 
             articleBuffer.push(data)
             $("#removeFormArticle").append('<input type="text" name="articleName' + articleBuffer.length + '" value="' + data.name + '"><input type="hidden" name="articleCode' + articleBuffer.length + '" value="' + data.code + '">')
