--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -10,10 +10,10 @@
 
         {% for t in paType %}
         <div class="col-6 col-sm-4 p-2">
-            <a class="card-block text-decorations-none" href="article/{{t.tName|lower}}">
+            <a class="card-block text-decorations-none" href="article/{{t.name|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.tSymbol|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.symbol|add:'.svg' %}">
                     </div>
                 </div>
             </a>
