--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
         <script src="{% static 'hub/jquery/jquery.min.js' %}"></script>
         <script src="{% static 'hub/bootstrap/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'hub/qrcodescanner/html5-qrcode.min.js' %}"></script>
+        <!--<script src="{% static 'hub/qrcodescanner/html5-qrcode.min.js' %}"></script> -->
+        <script src="https://unpkg.com/html5-qrcode" type="text/javascript">
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script src="https://unpkg.com/htmx.org@1.9.7"></script>
     </head>
