fixed problem that no article coud be stored in a Article with space

--- a/django_project/movement/templates/movement/movement.html
+++ b/django_project/movement/templates/movement/movement.html
@@ -55,7 +55,7 @@
     };
 
     function storeArticle(data){
-        if(data.storage && articleBuffer.length > 0 ){
+        if(data.space && articleBuffer.length > 0 ){
             storageBuffer = []
             storageBuffer.push(data)
             $("#storeFormStorage").html('<input type="text" name="storageName" value="' + data.name + '"><input type="hidden" name="storageCode" value="' + data.code + '">')
