fixed issue with if article with space couldend be scanned after using as a storage to use as article

--- a/django_project/movement/templates/movement/movement.html
+++ b/django_project/movement/templates/movement/movement.html
@@ -82,7 +82,7 @@
                     $(".toast-container").append(data1);
                 }
             });
-            clearBuffer()
+            clearBuffer();
         }
     };
 
@@ -118,6 +118,7 @@
         $("#removeFormArticle").html("")
         articleBuffer = []
         storageBuffer = []
+        scanBuffer = ""
     }
 
 
