--- a/django_project/hub/templates/hub/modules/scanner.html
+++ b/django_project/hub/templates/hub/modules/scanner.html
@@ -1,6 +1,6 @@
 
 
-<div style="width:100%;padding-bottom:100%" id="reader{{input}}"></div>
+<div style="width:260px; padding-bottom:100%" id="reader{{input}}"></div>
 
 <script>
 
@@ -21,7 +21,7 @@
         }
     }
 
-    var html5QrcodeScanner{{input}} = new Html5QrcodeScanner("reader{{input}}", { fps: 10, qrbox: 250});
+    var html5QrcodeScanner{{input}} = new Html5QrcodeScanner("reader{{input}}", {aspectRatio:1.333334 , fps: 10, qrbox: 250});
     html5QrcodeScanner{{input}}.render(onScanSuccess{{input}});
     
 </script>
