added basic logout and pw change from django (not good looking)

--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -33,6 +33,12 @@
                     {% endif %}
                 </a>
 
+                <a class="btn btn-light" type="button" href="./accounts/logout">Logout</a>
+                <a class="btn btn-light" type="button" href="./accounts/password_change">Change Password</a>
+
+
+
+
             </div>
         </nav>
         
