--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -27,9 +27,9 @@
 
                 <a class="navbar-brand">
                     {% if symbol == None %}
-                        <img style="width:50px" src="{% static 'hub/SVG/Logo.svg' %}">
+                        <img style="width:50px" src="{% static 'hub/symbols/Logo.svg' %}">
                     {% else %}
-                        <img style="width:50px" src="{% static 'hub/SVG/'|add:symbol|add:'.svg' %}">
+                        <img style="width:50px" src="{% static 'hub/symbols/'|add:symbol|add:'.svg' %}">
                     {% endif %}
                 </a>
 
