--- a/django_project/hub/templates/hub/hub.html
+++ b/django_project/hub/templates/hub/hub.html
@@ -13,7 +13,7 @@
             <a class="card-block text-decorations-none" href="article/{{t.name|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.symbol|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/symbols/'|add:t.symbol|add:'.svg' %}">
                     </div>
                 </div>
             </a>
@@ -29,7 +29,7 @@
             <a class="card-block text-decorations-none" href="storage/{{t.name|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100px" src="{% static 'hub/SVG/'|add:t.symbol|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/symbols/'|add:t.symbol|add:'.svg' %}">
                     </div>
                 </div>
             </a>
@@ -43,7 +43,7 @@
             <a class="card-block text-decorations-none" href="{{l|lower}}">
                 <div class="card p-2 justify-content-between align-items-center">
                     <div class"=card-body ">
-                        <img style="width:100px" src="{% static 'hub/SVG/'|add:l|add:'.svg' %}">
+                        <img style="width:100px" src="{% static 'hub/symbols/'|add:l|add:'.svg' %}">
                     </div>
                 </div>
             </a>
