--- a/django_project/hub/templates/hub/header.html
+++ b/django_project/hub/templates/hub/header.html
@@ -33,8 +33,8 @@
                     {% endif %}
                 </a>
 
-                <a class="btn btn-light" type="button" href="./accounts/logout"><img style="width:45px" src="{% static 'hub/symbols/Signout.svg' %}"></a>
-                <a class="btn btn-light" type="button" href="./accounts/password_change"><img style="width:45px" src="{% static 'hub/symbols/Setting.svg' %}"></a>
+                <a class="btn btn-light" type="button" href="/accounts/logout"><img style="width:45px" src="{% static 'hub/symbols/Signout.svg' %}"></a>
+                <a class="btn btn-light" type="button" href="/accounts/password_change"><img style="width:45px" src="{% static 'hub/symbols/Setting.svg' %}"></a>
 
 
 
