--- a/django_project/hub/templates/hub/modules/search.html
+++ b/django_project/hub/templates/hub/modules/search.html
@@ -29,6 +29,7 @@
 
         {% elif type == "storage" %}
             <th scope="col">Name</th>
+            <th scope="col">Struktur</th>
 
         {% elif type == "code" %}
             <th scope="col">Code</th>
